--- a/034780906121997/Certificados.html
+++ b/034780906121997/Certificados.html
@@ -29,7 +29,7 @@
 		</script>	
 	</head>
 
-	<body onload="showMessagesPanel();"><span id="j_id4"><span id="queuedMessages" class="invisible">false</span></span>
+	<body onload="showMessagesPanel();"><span id="j_id4"><span id="queuedMessages" class="invisible"></span></span>
 		<center>
 			<div id="mainPanelExterna" class="mainPanelExterna">
 				<table width="100%" cellpadding="0" cellspacing="0" border="0" class="mainTableExterna">
